--- a/views/index.hbs
+++ b/views/index.hbs
@@ -57,6 +57,7 @@ input[type="submit"]:hover {
 </style>
 <body>
   <div class="container">
+    <img src="{{logo}}" alt="" srcset="">
     <form action="/api/oauth2/authorize" method="post">
       <h2>Login Form</h2>
       <label for="username">Username:</label>
